# mongosql-auth-c

./: .evg.yml  .gitignore  README.md  THIRD_PARTY_NOTICES
cmake/: FindGSSAPI.cmake  FindMongoCrypto.cmake  FindMongoKerberos.cmake
installers/msi/mongosql-auth/: ConfigFragment.wxs  DocumentationFragment.wxs  FeatureFragment.wxs  LICENSE.rtf  LibraryFragment.wxs  Product.wxs  mongosql-auth.dsn  my.cnf
src/: CMakeLists.txt  bson-md5.c  mongoc-crypto-cng-private.h  mongoc-crypto-openssl.c  mongoc-memcmp-private.h  mongoc-rand-common-crypto.c  mongoc-rand-openssl.c  mongoc-rand-private.h  mongoc-scram.h  versioninfo.rc.in
src/mongosql-auth/: auth_mongosql_plugin.c  bson-md5.h  bson.c  bson.h  mongoc-b64-private.h  mongoc-config.h.in  mongoc-crypto-cng.c  mongoc-crypto-cng.h  mongoc-crypto-common-crypto-private.h  mongoc-crypto-common-crypto.c  mongoc-crypto-openssl-private.h  mongoc-crypto-openssl.c  mongoc-crypto-private.h  mongoc-crypto.c  mongoc-error.h  mongoc-memcmp-private.h  mongoc-rand-cng.c  mongoc-rand.c  mongoc-rand.h  mongoc-scram.c  mongosql-auth-config.h.in  mongosql-auth-conversation.c  mongosql-auth-conversation.h  mongosql-auth-gssapi.c  mongosql-auth-gssapi.h  mongosql-auth-plugin.c  mongosql-auth-plugin.h  mongosql-auth-sasl.h  mongosql-auth-sspi.c  mongosql-auth-sspi.h  mongosql-auth.c  mongosql-auth.h
src/mongosql-auth/mongoc/: bson-md5-private.h  bson-md5.c  mongoc-b64.c  mongoc-b64.h  mongoc-config.h.in  mongoc-crypto-cng-private.h  mongoc-crypto-cng.c  mongoc-crypto-common-crypto-private.h  mongoc-crypto-common-crypto.c  mongoc-crypto-openssl-private.h  mongoc-crypto-openssl.c  mongoc-crypto-private.h  mongoc-crypto.c  mongoc-memcmp-private.h  mongoc-memcmp.c  mongoc-misc.c  mongoc-misc.h  mongoc-rand-cng.c  mongoc-rand-common-crypto.c  mongoc-rand-openssl.c  mongoc-rand-private.h  mongoc-scram.c  mongoc-scram.h
test/resources/gssapi/: krb5.conf
test/resources/mongosqld/: schema.yml
test/resources/orchestration/configs/replica_sets/: auth-ssl.json  auth.json  basic-ssl.json  basic.json
test/resources/orchestration/configs/servers/: auth-ssl.json  basic-ssl.json
test/resources/orchestration/configs/sharded_clusters/: auth-ssl.json  auth.json  basic-ssl.json  basic.json
test/unit/: CMakeLists.txt  test-examples.c  test-examples.h  unit-tests.c  unit-tests.h
